--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 <p>✨ 享受官网原版GPT-4：低至3.78元/天</p>
                 <p>‼️‼️‼️官网一月标价为145元，本店价格较官网更低‼️‼️‼️</p>
                 <p>💡 会员有效期内稳定售后服务</p>
-                <p>💡账号出现问题按天书退款</p>
+                <p>💡账号出现问题按天数退款</p>
             </div>
             <div class="mt-4 p-4 border rounded-lg bg-blue-50">
                 <h3 class="text-lg font-semibold">🔹 Claude Pro账号</h3>
                 <p>✨ 享受官网原版Claude模型：低至4.68元/天</p>
                 <p>‼️‼️‼️官网一月标价为208元，本店价格较官网更低‼️‼️‼️</p>
                 <p>💡 会员有效期内稳定售后服务</p>
-                <p>💡账号出现问题按天书退款</p>
+                <p>💡账号出现问题按天数退款</p>
             </div>
             <h3 class="mt-4 font-semibold">🏆 为什么选择我们的服务？</h3>
             <p>长期稳定（会员有效期内）| 全天专业维护</p>
