--- a/Privacy Policy.html
+++ b/Privacy Policy.html
@@ -41,9 +41,9 @@
     </ul>
 
     <h2>3. 隐私安全</h2>
-    <p>3.1 保护您的数据安全是我们的首要任务:</p>
+    <p>3.1 保护您的数据安全是我们的首要任务.</p>
     <p>3.2 除非法律要求或获得您的明确同意,我们不会与第三方分享您的个人信息。</p>
-    <p>3.3 您有查看、更正或要求删除有关您的个人信息。如需行使这些权利,请联系我们的客户服务。</p>
+    <p>3.3 您有查看、更正或要求删除有关您的个人信息的权利。如需行使这些权利,请联系我们的客户服务。</p>
 
     <h2>4. 政策更新</h2>
     <p>4.1 我们可能会不时更新本隐私政策。更新后的政策将在网站上公布。</p>
